force-app/main/default/objects/Exl_POE_Restriction_Junction__mdt/Exl_POE_Restriction_Junction__mdt.object-meta.xml
<CustomObject>
    <label>POE Restriction Junction</label>
    <pluralLabel>POE Restriction Junction</pluralLabel>
</CustomObject>