force-app/main/default/objects/Exl_POE_Restriction_Junction__mdt/fields/POE_Type__c.field-meta.xml
<CustomField>
    <fullName>POE_Type__c</fullName>
    <label>POE Type</label>
    <referenceTo>Exl_POE_Type__mdt</referenceTo>
    <relationshipLabel>POE Restriction Junction</relationshipLabel>
    <relationshipName>POE_Restriction_Junction</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>