force-app/main/default/objects/Exl_POE_Restriction_Junction__mdt/fields/Restriction_Category__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Category__c</fullName>
    <label>Restriction Category</label>
    <referenceTo>Exl_Restriction_Category__mdt</referenceTo>
    <relationshipLabel>POE Restriction Junction</relationshipLabel>
    <relationshipName>POE_Restriction_Junction</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>