force-app/main/default/objects/Exl_POE_Restriction_Junction__mdt/fields/Stop_Code__c.field-meta.xml
<CustomField>
    <fullName>Stop_Code__c</fullName>
    <label>Stop Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>