force-app/main/default/objects/Exl_POE_Restriction_Junction__mdt/fields/Stop_Code_Label__c.field-meta.xml
<CustomField>
    <fullName>Stop_Code_Label__c</fullName>
    <label>Stop Code Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>