force-app/main/default/objects/Exl_POE_Restriction_Junction__mdt/listViews/All_mappings.listView-meta.xml
<ListView>
    <fullName>All_mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>POE_Type__c</columns>
    <columns>Restriction_Category__c</columns>
    <columns>Stop_Code__c</columns>
    <columns>Stop_Code_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All mappings</label>
</ListView>